tests/errors/phpdoc_order.php
<?php

declare(strict_types=1);

/**
 * @return array<string, mixed>
 *
 * @param $a
 * @param $b
 * @param $c
 */
function hello($a, $b, $c): array
{
}
